--- a/index.html
+++ b/index.html
@@ -15,6 +15,42 @@
     </div>
 
     <div class="sidebar">
+      <div class="sidebar-list">
+        <div class="sidebar-title">
+          <img class="dashboard-icon" src="./icons/view-dashboard.svg" alt="dashboard icon">
+          <span> Dashboard</span>
+        </div>
+        <div class="dash-menu1">
+          <img src="./icons/home.svg" alt="home">
+          <a href="/index.html">Home</a>
+
+          <img src="./icons/account.svg" alt="home">
+          <a href="/index.html">Profile</a>
+
+          <img src="./icons/message-reply.svg" alt="home">
+          <a href="/index.html">Messages</a>
+
+          <img src="./icons/history.svg" alt="home">
+          <a href="/index.html">History</a>
+
+          <img src="./icons/list-box.svg" alt="home">
+          <a href="/index.html">Tasks</a>
+
+          <img src="./icons/account-group.svg" alt="home">
+          <a href="/index.html">Communities</a>
+
+        </div>
+        <div class="dash-menu2">
+          <img src="./icons/cog.svg" alt="home">
+          <a href="/index.html">Settings</a>
+
+          <img src="./icons/help-circle.svg" alt="home">
+          <a href="/index.html">Support</a>
+
+          <img src="./icons/shield-lock.svg" alt="home">
+          <a href="/index.html">Privacy</a>
+        </div>
+      </div>
     </div>
 
     <div class="content">
