changed the href for the a tags in sidebar

--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
         </div>
         <div class="dash-menu1">
           <img src="./icons/home.svg" alt="home">
-          <a href="/index.html">Home</a>
+          <a href="https://danielpopovici745.github.io/admindashboard/">Home</a>
 
           <img src="./icons/account.svg" alt="home">
-          <a href="/index.html">Profile</a>
+          <a href="">Profile</a>
 
           <img src="./icons/message-reply.svg" alt="home">
-          <a href="/index.html">Messages</a>
+          <a href="">Messages</a>
 
           <img src="./icons/history.svg" alt="home">
-          <a href="/index.html">History</a>
+          <a href="">History</a>
 
           <img src="./icons/list-box.svg" alt="home">
-          <a href="/index.html">Tasks</a>
+          <a href="">Tasks</a>
 
           <img src="./icons/account-group.svg" alt="home">
-          <a href="/index.html">Communities</a>
+          <a href="">Communities</a>
 
         </div>
         <div class="dash-menu2">
           <img src="./icons/cog.svg" alt="home">
-          <a href="/index.html">Settings</a>
+          <a href="">Settings</a>
 
           <img src="./icons/help-circle.svg" alt="home">
           <a href="/index.html">Support</a>
