remove href from a tag in dash-menu2

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
           <a href="">Settings</a>
 
           <img src="./icons/help-circle.svg" alt="home">
-          <a href="/index.html">Support</a>
+          <a href="">Support</a>
 
           <img src="./icons/shield-lock.svg" alt="home">
-          <a href="/index.html">Privacy</a>
+          <a href="">Privacy</a>
         </div>
       </div>
     </div>
