completed the mock search bar in the header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   <div class="wrapper">
 
     <div class="header">
-      <img src="" alt="">
+      <div class="header-wrap">
+        <div class="searchbar">
+          <img src="./icons/magnify.svg" alt="search icon">
+          <input type="text" name="search" id="search">
+        </div>
+        
+      </div>
+      
     </div>
 
     <div class="sidebar">
