finished the notification bell, profile picture and name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
           <img src="./icons/magnify.svg" alt="search icon">
           <input type="text" name="search" id="search">
         </div>
-        
+        <div class="notif-name">
+          <img class ="notif-bell" src="./icons/bell-outline.svg" alt="notification icon">
+          <img class="profile-picture" src="./icons/profile.png" alt="profile picture">
+          <span class="profile-name">Joseph Smith</span>
+        </div>
+
       </div>
       
     </div>
