started creating the announcements, adjusting size of the project windows

--- a/index.html
+++ b/index.html
@@ -128,7 +128,13 @@
           </div>
         </div>
       </div>
+      <div class="announcements">
+      <span>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus deserunt impedit rerum labore obcaecati dolore!</span>
+      <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, excepturi nihil? Tempore cum temporibus porro.</span>
+      <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quis fuga illo optio ullam aspernatur.</span>
+      </div>
     </div>
+    
 
   </div>
   
