completed the trending card

--- a/index.html
+++ b/index.html
@@ -148,10 +148,38 @@
             <span class="announcement-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quis fuga illo optio ullam aspernatur.</span>
           </div>
           
-
+          
         </div>
+        <span class="content-title">Trending</span>
         <div class="trending">
-
+          <div class="trend">
+            <img src="./icons/flag.png" alt="">
+            <div class="trend-text">
+              <span class="trend-user">@phillip</span>
+              <span class="trend-name">Tsunami Emulation</span>
+            </div>
+          </div>
+          <div class="trend">
+            <img src="./icons/dog.png" alt="">
+            <div class="trend-text">
+              <span class="trend-user">@justin</span>
+              <span class="trend-name">ChatGPT Analyzer</span>
+            </div>
+          </div>
+          <div class="trend">
+            <img src="./icons/starprofile.png" alt="">
+            <div class="trend-text">
+              <span class="trend-user">@maria</span>
+              <span class="trend-name">Twitter Remake</span>
+            </div>
+          </div>
+          <div class="trend">
+            <img src="./icons/cat.png" alt="">
+            <div class="trend-text">
+              <span class="trend-user">@sophia</span>
+              <span class="trend-name">D&D Character Maker</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
